--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 More
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Time</a>
+                <a class="dropdown-item" href="#">Date</a>
                 
               </div>
             </li>
@@ -55,6 +55,7 @@
             <p></p>
             <a class="btn btn-info btn-lg" id="load" href="#" role="button">Reload Page</a>
           </div>
+          
       </div>
    
 
